--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,9 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
+            <div>
+                writer: {{post.author}}
+            </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
 
